--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "5.18.0",
     "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.1",
     "archiver": "^7.0.1",
     "next": "14.2.0",
     "nodemailer": "^7.0.12",
